# rustybot

./: Cargo.toml  README.md
src/: main.rs
src/plugins/: common.rs  lta_query.rs  mod.rs  remember.rs
