[package]
name = "rustybot15"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc = "0.15.0"
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.28"
lta = { version = "0.6.0" }
async-trait = "0.1.68"
chrono = "0.4.24"